--- a/Social network/Social network.Rmd
+++ b/Social network/Social network.Rmd
@@ -25,7 +25,8 @@ library(ggraph)
 
 ```
 
-En el siguiente trabajo realizaremos un analisis para ver cómo están conectados los usuarios que mencionan a las vacunas Pfizer y SputnikV dentro de la red social de Twitter.
+En este apartado del trabajo realizaremos un analisis para ver cómo están conectados los usuarios que mencionan a las vacunas Pfizer y SputnikV dentro de la red social de Twitter.
+
 
 ### Usuarios conectados entre sí. 
 
@@ -111,6 +112,8 @@ plot(g_sputnik,
 
 ### Veamos datos de la red
 
+Ahora bien, nos parece interesante averiguar un poco sobre nuestra red. En este sentido podemos observar el tamaño y diametro de la red, los usuarios más alejados a ella, la distancia promedio, entre otros.
+
 ```{r echo=FALSE}
 #Tamaño de la red
 
@@ -145,6 +148,8 @@ hist(g_sputnik.outd, breaks = 30)
 ```
 
 ### Calculemos y plotemos segun el grado de entrada
+
+A diferencia del primer gráfico que realizamos, acá nos interesa graficar con diferentes tamaños: queremos que nos aparezcan más grandes aquellos nodos con mayor grado de entrada.
 
 ```{r echo=FALSE}
 
@@ -192,8 +197,9 @@ plot(g_sputnik,
      vertex.color= V(g_sputnik)$color,
      vertex.size = 25*(g_sputnik_ec$vector),
      main="Sputnik", 
-     vertex.label.cex = 1.3,
-     vertex.label.dist= 0.9,
+     vertex.label = NA,
+    # vertex.label.cex = 1.3,
+    # vertex.label.dist= 0.9,
      main="Sputnik", 
      edge.arrow.size = 0.2,
      edge.arrow.width = 0.2,
@@ -204,9 +210,13 @@ plot(g_sputnik,
 
 ```
 
+El nodo con más influencia es GiuliDinapoli, quien en el gráfico anterior aparecía con nombre dado que tenía mayor grado de entrada.
+
 ### Comunidades
 
-Hacemos un gráfico para ver las comunidades
+Ahora nos interesa ver las comunidades que se forman. Esto nos muestra cómo están relacionados los usuarios. 
+
+Para ello haremos gráfico que nos las muestre.
 
 ```{r echo=FALSE}
 sp <- walktrap.community(g_sputnik)
@@ -486,3 +496,14 @@ new.color<-rgb(new.color, alpha=.6) #rgb color con intensidad de los tres colore
 
 plot(wc_pf, g_pfizer, vertex.label = NA, vertex.color = new.color, vertex.size= sqrt(g_pfizer_ind)*2, edge.size = 0.5, edge.color = "grey", edge.arrow.size = 0.2)
 ```
+
+
+### Conclusiones
+
+Luego de realizar un análisis de redes muy general concluimos que es necesario realizar un zoom para poder entender mejor la conexión entre los usuarios. Si bien los grafos quedan bien y son lindos esteticamente, lamentablemente no se puede realizar un analisis descriptivo de ellos sin este zoom que mencionamos. 
+
+Esta situación nos despierta el pensamiento de que quizás nos deberíamos haber enfocado únicamente en este analisis para profundizar en el y lograr sacar buena información. 
+
+Sin embargo, el esfuerzo no fué en vano, creemos que fue util para aprender e incluso nos sirve como puntapié para en un futuro mejorar y profundizar el análisis. 
+
+
